Rewrite constraints